# Gitignore-Merger

./: Cargo.toml  LICENSE-MIT
.devcontainer/: devcontainer.json
.zed/: debug.json
src/: cache.rs  fingerprint.rs  gitignore.rs  init.rs  main.rs  main.sync-conflict-20260317-024502-WBG6IRI.rs  syncthing.rs  walker.rs
