[package]
name = "gitignore-merger"
version = "0.1.2"
authors = ["roganmatrivski"]
edition = "2021"
repository = "https://github.com/RoganMatrivski/Gitignore-Merger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "^0.1.48"


[dependencies]
clap = { version = "^4.5", features = ["derive"] }
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
eyre = "0.6.12"
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"

[profile.dev.package.backtrace]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
